# project-d33f6a1e-ff6e-4c89-9c3e-

./: Dockerfile  README.md
app/: package.json  tsconfig.app.json  tsconfig.node.json
app/src/: App.css  App.tsx  index.css
app/src/lib/: index.ts  sdk.gen.ts
services/: .env  main.py  pyproject.toml
services/api/: __init__.py  models.py  openapi.yaml  routes.py
services/lib/: __init__.py  lumenary.py
