[project]
name = "services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocache>=0.12.3",
    "fastapi>=0.115.7",
    "instructor[anthropic]>=1.7.2",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "supabase>=2.12.0",
    "uvicorn>=0.34.0",
]
